[package]
name = "decibender"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3


[dependencies]
anyhow = "1.0.86"
cpal = "0.15.3"
dasp = { version = "0.11.0", features = ["signal-rms"] }
dotenvy = "0.15.7"
env_logger = "0.11.3"
indicatif = "0.17.8"
inquire = "0.7.5"
itertools = "0.13.0"
log = "0.4.21"
reqwest = { version = "0.12.5", features = ["json"] }
rodio = "0.18.1"
rspotify = { version = "0.13.2", features = ["env-file", "cli"] }
tokio = { version = "1.38.0", features = ["full"] }
