[package]
name = "decibender"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[build-dependencies]
dotenvy = "0.15.7"
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.86"
cpal = "0.15.3"
env_logger = "0.11.3"
itertools = "0.13.0"
log = "0.4.21"
reqwest = { version = "0.12.5", features = ["json"] }
rodio = "0.18.1"
rspotify = { version = "0.13.2", features = ["cli"] }
tokio = { version = "1.38.0", features = ["full"] }
rand = "0.8.5"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
